fix(presentation): substitui new Locale por Locale.of
O construtor Locale(String, String) foi deprecado no Java 19.
Substitui por Locale.of, que retorna a instância canônica e
elimina o warning de compilação. Comportamento idêntico.

Arquivos afetados: ApplicationBootstrap, TelaLancamento, TelaRelatorio.